# fontdef

./: CMakeLists.txt  README.md  build-deb  codepage.h  codepoint.cpp  codepoint.h  controlTemplate  controlTemplateTrusty  controlTemplateXenial  font.cpp  font.h  fontdef.pro  fontdef_autocompl  fontdefgenerator.cpp  fontdefgenerator.h  glyphinfo.h  main.cpp  make-deb  programoptions.cpp  programoptions.h  rect.h  version.h
pkg/usr/share/bash-completion/completions/: fontdef
